test/Fail/ShouldBeEmpty.err
ShouldBeEmpty.agda:12.1-7: error: [ShouldBeEmpty]
One should be empty, but the following constructor patterns are
valid:
  one
when checking the clause left hand side
bad ()
